# dksap-polkadot

./: .gitignore  LICENSE  README.md  package.json
client/: 0-generateKeyPair.js  1-registerScanKey.js  2-mintToAlice.js  3-aliceApproveToBob.js  3-aliceTransferToBob.js  4-bobTransferToAlice.js  4-bobTransferToCharlie.js  5-aliceBurn.js  5-charlieApproveToBob.js  5-charlieTransferToAlice.js  6-aliceBurn.js  6-bobTransferToAlice.js  7-aliceBurn.js  util.js
config/: charlie.json  default.json
erc721/: Cargo.toml  lib.rs
relayer/: index.js
tests/: dksap.js
